# tini

./: LICENSE  README.md  export_presets.cfg  project.godot
app/: main.gd  main.gd.uid  main.tscn
app/pages/: login_page.gd  login_page.gd.uid  login_page.tscn
app/theme/: main_theme.tres
scripts/: pyproject.toml  tini_downloader.py
scripts/tini/: downloader.py  tini.py
scripts/tini/api/: client.py  headset.py  query.py
scripts/tini/api/responses/: __init__.py  base.py  release_channel.py
