[project]
name = "tini-downloader"
version = "0.1.0"
description = "Quest App APK Downloader"
authors = [
    {name = "coal-rock"},
]
dependencies = ["requests>=2.32.5", "pydantic>=2.12.4"]
requires-python = ">=3.10"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
download = "python -m tini.downloader"
